--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: Hamilton
-description: A minimal and beautiful Jekyll theme best for writing and note-taking.
+title: Andishdokht
+description: Avaz shok
 author: Shangzhi Huang
 avatar: /logo.png
 email: ngzhio@gmail.com
