--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Andishdokht
 description: Avaz shok
-author: Shangzhi Huang
-avatar: /logo.png
+author: M. Andishdokt
+avatar: http://www.doppelme.com/images/examples/fade2.gif
 email: ngzhio@gmail.com
 
 plugins:
